@@ -1,4 +1,4 @@
-/.twitma.yml
+/.twitma.json
 /.twitmarc.toml
 /twitma
 /twitma.test
